fix: added vertical align and width

--- a/three/style.css
+++ b/three/style.css
@@ -4,6 +4,9 @@
 .w-100 {
   width: 100% !important;
 }
+.w-75 {
+  width: 75%;
+}
 .m-0 {
   margin: 0px !important;
 }
